<resources>
    <string name="app_name">Enteligende App</string>
    <string name="copyright"><![CDATA[Copyright 2017 © Stanley P. & Jonas D. (11/3)]]></string>
    <string name="facebook_app_id">1793901364258303</string>
    <string name="spielen">SPIELEN</string>
    <string name="frage_senden">FRAGE SENDEN</string>
    <string name="problem_melden">Problem melden</string>
    <string name="einsenden">Einsenden</string>
    <string name="antwortenfuerfrage">4 Antworten (richtige oben)</string>
    <string name="wann_wurde_die_berliner_mauer_niedergerissen">Wann wurde die Berliner Mauer niedergerissen?</string>
    <string name="wie_nannte_man_louis_xiv">Wie nannte man Louis XIV?</string>
    <string name="sonnenk_nig">Sonnenkönig</string>
    <string name="mondk_nig">Mondkönig</string>
    <string name="sonnenherrscher">Sonnenherrscher</string>
    <string name="franz_sischer_k_nig">Französischer König</string>
    <string name="auf_welcher_insel_gruppe_liegt_pearl_harbor">Auf welcher Insel-Gruppe liegt Pearl Harbor?</string>
    <string name="japan">Japan</string>
    <string name="balearen">Balearen</string>
    <string name="hawaii">Hawaii</string>
    <string name="madagaskar">Madagaskar</string>
    <string name="wie_heisst_der_g_tterberg_der_griechen">Wie heisst der Götterberg der Griechen?</string>
    <string name="athen">Athen</string>
    <string name="olymp">Olymp</string>
    <string name="gyros">Gyros</string>
    <string name="nyx">Nyx</string>
    <string name="wie_hei_t_das_bekannteste_wahrzeichen_von_paris">Wie heißt das bekannteste Wahrzeichen von Paris?</string>
    <string name="schloss_versailles">Schloss Versailles</string>
    <string name="louvre">Louvre</string>
    <string name="g_rten_von_babylon">Gärten von Babylon</string>
    <string name="eiffelturm">Eiffelturm</string>
    <string name="welche_ist_der_gr_sste_kontinent">Welcher ist der grösste Kontinent?</string>
    <string name="asien">Asien</string>
    <string name="antarktis">Antarktis</string>
    <string name="afrika">Afrika</string>
    <string name="europa">Europa</string>
    <string name="nenne_die_hauptstadt_von_australien">Nenne die Hauptstadt von Australien</string>
    <string name="canberra">Canberra</string>
    <string name="sydney">Sydney</string>
    <string name="brisbane">Brisbane</string>
    <string name="melbourne">Melbourne</string>
    <string name="wie_nennt_man_einen_ungl_ubigen">Wie nennt man einen Ungläubigen?</string>
    <string name="authist">Autist</string>
    <string name="artist">Artist</string>
    <string name="agnostiker">Attest</string>
    <string name="atheist">Atheist</string>
    <string name="welchen_titel_trugen_die_k_nige_des_alten_gyptens">Welchen Titel trugen die Könige des alten Ägyptens?</string>
    <string name="was_ist_ein_bonsai">Was ist ein „Bonsai“?</string>
    <string name="japanischer_bambus">Japanischer Bambus</string>
    <string name="chinesischer_zwergbaum">Chinesischer Zwergbaum</string>
    <string name="japanischer_zwergbaum">Japanischer Zwergbaum</string>
    <string name="chinesischer_bambus">Chinesischer Bambus</string>
    <string name="was_ist_ein_pasch">Was ist ein „Pasch“?</string>
    <string name="wenn_die_summer_zweier_zahlen_6_ist">Wenn die Summer zweier Zahlen 6 ist</string>
    <string name="_2_w_rfel_mit_gleicher_augenzahl">2 Würfel mit gleicher Augenzahl</string>
    <string name="wenn_mit_2_w_rfeln_gespielt_wird">Wenn mit 2 Würfeln gespielt wird</string>
    <string name="sieges_ruf_bei_monopoly">Sieges-Ruf bei Monopoly</string>
    <string name="was_heisst_wodka">Was heisst „Wodka“?</string>
    <string name="w_sserchen">Wässerchen</string>
    <string name="kartoffelsaft">Kartoffelsaft</string>
    <string name="erdsaft">Erdsaft</string>
    <string name="s_ftchen">Säftchen</string>
    <string name="wie_hei_t_das_kraftwerk_der_zelle">Wie heißt das Kraftwerk der Zelle?</string>
    <string name="cytoplasma">Cytoplasma</string>
    <string name="ribosom">Ribosom</string>
    <string name="maiusculus">Maiusculus</string>
    <string name="startseite">Startseite</string>
    <string name="neustart">NEUSTART</string>
    <string name="name">Name</string>
    <string name="abschicken">Abschicken</string>
    <string name="beschreibe_dein_problem">Beschreibe dein Problem</string>
    <string name="du_hast_das_quiz_erfolgreich_bestanden_gl_ckwunsch">Du hast das Quiz erfolgreich bestanden. Glückwunsch!</string>
    <string name="teile_dein_ergebnis_mit_deinen_freunden">Teile dein Ergebnis mit deinen Freunden!</string>
    <string name="in_arbeit">IN ARBEIT</string>
    <string name="du_hast_verloren_versuche_es_erneut">Du hast verloren. Versuche es erneut.</string>
    <string name="beschreibe_konkret_dein_problem">Beschreibe konkret dein Problem</string>
    <string name="problem_einsenden">PROBLEM EINSENDEN</string>
    <string name="betreff">Betreff</string>
    <string name="senden">Senden</string>
    <string name="frage_einsenden">FRAGE EINSENDEN</string>
    <string name="deine_frage">Deine Frage</string>
    <string name="deine_antworten_richtige_zuerst">Deine Antworten (richtige zuerst)</string>

</resources>
