<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moruk"
    >

    <TextView
        android:text="@string/du_hast_verloren_versuche_es_erneut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:id="@+id/tvUS" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/formular"
        android:id="@+id/imageView7"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <TextView
        android:text="@string/startseite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tVHome"
        android:textAlignment="viewStart"
        android:clickable="true"
        android:textAllCaps="true"
        android:layout_below="@+id/iVHome"
        android:layout_alignEnd="@+id/iVHome"
        android:textSize="18sp" />

    <TextView
        android:text="@string/neustart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tVRepeat"
        android:textAlignment="viewStart"
        android:clickable="true"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_below="@+id/iVRepeat"
        android:layout_alignEnd="@+id/iVRepeat" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lose"
        android:id="@+id/imageView12"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/iVHome"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/repeat"
        android:id="@+id/iVRepeat"
        android:layout_marginEnd="43dp"
        android:layout_alignTop="@+id/iVHome"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/home"
        android:id="@+id/iVHome"
        android:layout_marginTop="57dp"
        android:layout_marginStart="38dp"
        android:layout_below="@+id/tvUS"
        android:layout_alignStart="@+id/imageView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tVHome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="sans" />

</RelativeLayout>
